refactor: Extract fileId api path parameter into separate declaration.
